<resources>
    <string name="app_name">SME D-Share</string>
    <string name="select_data_amount">Select Data Amount:</string>
    <string name="message_not_sent_yet">Message not sent yet.</string>
    <string name="message_not_delivered_yet">Message not delivered yet.</string>
    <string name="enter_phone_number_here">Enter phone number here</string>
    <string name="enter_registration_code">Enter Registration Code</string>
    <string name="enter_your_company_name">Enter your Company Name</string>
    <string name="sme_security_code">SME security code</string>
    <string name="send_sms">Send SMS</string>
    <string name="about">About</string>
    <string name="About">Thank you so very much for using SME D-Share -a mobile app that simplifies the way you share data to your esteemed Customers.
        This application was developed by SADARWA Inc. as part of our efforts to finding solutions to some of the problems that people faces in their day-to-day activities, most especially those concerning technology.
        You can reach us via: </string>
    <string name="web">Our Website: www.sadarwa.com</string>
    <string name="whatsapp">Our WhatsApp: +2347061599050</string>
    <string name="facebook">Our Facebook page: facebook.com/sadarwa</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tab_widget">Tab Widget</string>
</resources>
