<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.sadarwa.aminubishier.smed_share.About"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#00a"
        android:textSize="17sp"
        android:padding="40dp"
        android:paddingBottom="10dp"
        android:layout_weight="1"
        android:text="@string/About" />
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#00a"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingBottom="17dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"

        android:layout_weight="1"
        android:text="@string/web" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#00a"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingBottom="17dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:layout_weight="1"
        android:text="Our Email: info@sadarwa.com" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#00a"
        android:textStyle="bold"
        android:textSize="20dp"
        android:paddingBottom="17sp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:layout_weight="1"
        android:text="@string/facebook" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#00a"
        android:textStyle="bold"
        android:textSize="17sp"
        android:paddingBottom="20dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:layout_weight="1"
        android:text="@string/whatsapp" />
</LinearLayout>
